turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:4: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
	setCouleurBrosse()=Color.black;
        ^LangtonsAnt:9: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
	setCouleurBrosse()=Color.white;
        ^