turmites.lessons.turmites.langton.Langton.scala.code
def step() {
getCouleurSol();
if(getCouleurSol()==Color.white){
	setCouleurBrosse()=Color.black;
	droite();
	avance();

}else{
	setCouleurBrosse()=Color.white;
	gauche();
	avance();
}
}
